@@ -170,6 +170,10 @@ public:
 		DEL1_BPMHOST,
 		DYN1_COMPRESS,
 		DYN1_LIMITER,
+		REV1_WET,
+		REV1_ROOM,
+		REV1_DAMP,
+		REV1_WIDTH,
 
 		NUM_PARAMS
 	};
