@@ -152,7 +152,11 @@ struct {
 	{ "DEL1_BPMSYNC",   0.0f },
 	{ "DEL1_BPMHOST", 180.0f },
 	{ "DYN1_COMPRESS",  0.0f },
-	{ "DYN1_LIMIT",     1.0f }
+	{ "DYN1_LIMIT",     1.0f },
+	{ "REV1_WET",       0.0f },
+	{ "REV1_ROOM",      0.5f },
+	{ "REV1_DAMP",      0.5f },
+	{ "REV1_WIDTH",     0.0f }
 };
 
 
