@@ -5,6 +5,8 @@ ChangeLog
 
 SVN TRUNK
 
+- Reverb is being added as final effects stage (based on FreeVerb).
+  (HIGHLY EXPERIMENTAL)
 - Introducing a variable env.stage time parameter. (EXPERIMENTAL)
 - Dummy change-log entry for the new year.
 
